# arterial-tree-visualizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
exercises/: CMakeLists.txt  ex03_input.cpp  ex04_soma_cores.cpp  ex04_teoria.md  ex05_primitives.cpp  ex06_cube.cpp  ex08_teoria.md  ex09_projection.cpp  ex10_flashlight.cpp  ex11_teoria.md  ex12_vertex_normals.cpp  ex13_phong_specular.cpp  ex13_teoria.md  ex18_cyrus_beck.cpp  ex19_sutherland_hodgman.cpp  ex20_weiler_atherton.cpp  ex21_culling.cpp  ex21_teoria.md
include/: AnimationController.hpp  ArterialTree.hpp  Camera.hpp  ClippingUtils.hpp  MenuController.hpp  PickingUtils.hpp  SceneContext.hpp  ScreenshotUtils.hpp  Shader.hpp  TreeRenderer.hpp  VtkReader.hpp  lodepng.hpp
include/glad/: glad.h
shaders/: fragment.glsl  line_fragment.glsl  line_vertex.glsl  vertex.glsl
src/: AnimationController.cpp  ArterialTree.cpp  Camera.cpp  ClippingUtils.cpp  MenuController.cpp  PickingUtils.cpp  SceneContext.cpp  ScreenshotUtils.cpp  Shader.cpp  TreeRenderer.cpp  VtkReader.cpp  glad.c  lodepng.cpp  main.cpp  shader.cpp
